--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
     <button class="btn btn-secondary">⬅️</button>
     <button class="btn btn-secondary">➡️</button>
 
-    <script src="./image.js" type="module"></script>
+    <script src="image.js" type="module"></script>
   </body>
 </html>
 
